fixed css grid on cats page and fixed desktop nav bar from hiding overflow

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -83,7 +83,6 @@ body {
 img {
     max-width: 100%;
     border-radius: 5px;
-    margin: 3em 0;
 }
 
 @media (min-width: 750px){
@@ -102,11 +101,12 @@ img {
         margin-top: 5%;
         height: 0;
         text-align: center;
-        overflow: hidden;
+        visibility: hidden;
     }
 
     &__list--open{
         height: 50vh;
+        visibility: visible;
     }
 
     @keyframes slidein{
@@ -190,6 +190,7 @@ img {
             z-index: auto;
             height: auto;
             width: 50%;
+            visibility: visible;
         }
 
         &__item {
@@ -421,6 +422,7 @@ img {
 
 .fa-circle {
     opacity: 40%;
+    margin-top: 3em;
 }
 
 .green {
@@ -497,6 +499,10 @@ img {
         right: 1em;
         bottom: -5em;
         left: 0;
+    }
+
+    &__img {
+        margin: 3em 0;
     }
 }
 
@@ -697,7 +703,8 @@ input:focus {
 /* cats page scss */
 /* cats page typography */
 .adoption {
-    max-width: 100vw;
+    width: 100vw;
+    margin: 0;
     
     &__header {
         text-align: center;
@@ -718,12 +725,12 @@ input:focus {
 
     &__subtitle {
         color: $primaryPink;
+        font-size: 2rem;
         margin-bottom: 0.5em;
     }
 
     &__info {
         line-height: 2;
-        text-align: center;
         margin-bottom: 3.5em;
     }
 }
@@ -732,32 +739,30 @@ input:focus {
     width: 65%;
     height: 100%;
     margin: 0 auto;
+    text-align: center;
     @include flex(column, flex-end, center);
 }
-
-.card-container {
-    width: 80%;
-    margin: 0 auto;
-}
-
 
 .card {
     width: 275px;
     max-height: 450px;
     border-radius: 5px;
     position: relative;
-    margin: 1em auto;
+    margin: 0.5em auto;
     padding: 0 0 1em 0;
     box-shadow: 2px 2px 6px 0px $primaryPink;
 
     &__imgdiv {
-        max-height: 60%;
+        height: 60%;
         overflow: hidden;
+        border: 1px solid blue;
+        margin: 0;
     }
 
     &__img {
         max-width: 100%;
         object-fit: cover;
+        border: 1px solid red;
        
     }
 
@@ -776,35 +781,53 @@ input:focus {
     }
 }
 
+.card:last-child{
+    margin-bottom: 4em;
+}
+
 .card:hover, 
 .card:focus {
     box-shadow: 2px 2px 26px 0px $primaryPink;
 }
 
+.card-container {
+    width: 80%;
+    margin: 0 auto;
+}
+
 @media (min-width: 650px){
     .card-container { 
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: 2em;
-        row-gap: 3em;
+        grid-template-columns: repeat(auto-fit, 275px);
+        gap: 2.2em;
+        justify-content: center;
     }
+
+    .card {
+        &__imgdiv {
+            max-height: 60%;
+            overflow: hidden;
+            margin: 0;
+        }
+    }
+    
 }
 
-@media (min-width: 980px){
-    .card-container { 
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 3em;
-        margin: 0 auto 3em auto;
-    }
-}
+// @media (min-width: 980px){
+//     .card-container { 
+//         display: grid;
+//         grid-template-columns: repeat(3, 1fr);
+//         column-gap: 3em;
+//         margin: 0 auto 3em auto;
+//     }
+// }
 
-@media (min-width: 1100px){
-    .card-container { 
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
+// @media (min-width: 1100px){
+//     .card-container { 
+//         display: grid;
+//         grid-template-columns: repeat(4, 1fr);
+//     }
+// }
 
 .overlay__checklist {
     background-color: $accentGreen;
